# veh-science

./: .gitignore  README.md  pyproject.toml  veh_scientist_agent_instructions.md  veh_scientist_project_blueprint.md
configs/tasks/: tr_baseline.json  tr_baseline.yaml  tr_discover_replay.yaml
frontend/: app.js  data.js  index.html  styles.css
scripts/: beam_oracle_validation.py  build_discovery_report.py  cross_validate_matlab.py  matlab_replica_validation.py  phase1e_verification.py  phase3_parameter_sweep.py  phase4_comsol_validation.py  run_regression_smoke.py  run_replay_tr.py  serve_dashboard.py  step_0a_dispersion.py  step_0e_verification.py  veh_scientist_periodic_beam_runner.m
src/veh_scientist/: __init__.py  matplotlib_compat.py
src/veh_scientist/agents/: __init__.py  config.py  definitions.py  providers.py  runtime.py
src/veh_scientist/analysis/: __init__.py  objectives.py
src/veh_scientist/codesign/: __init__.py  translator.py
tests/unit/: test_beam_screening.py  test_calibration_loop.py  test_derivation_appendix.py  test_derivation_cards.py  test_discover_taskcard.py  test_discovery_execute.py  test_discussion_publication.py  test_dispersion.py  test_finite_chain_and_harvesting.py  test_frontend_assets.py  test_gap_ranker.py  test_hypothesis_ladder.py  test_l1_chain_replay.py  test_l2_beam.py  test_l2_beam_replay.py  test_l3_comsol_driver.py  test_l3_toolchain.py  test_mechanism_portfolio.py  test_negative_memory.py  test_replay_tr.py  test_research_stack.py  test_solver_library.py  test_taskcard_and_screening.py
(+59 files in other folders)
